--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -79,7 +79,7 @@ $include-html-global-classes: $include-html-classes;
 // $include-html-grid-classes: $include-html-classes;
 // $include-xl-html-grid-classes: false;
 
-// $row-width: rem-calc(1000);
+   $row-width: rem-calc(1280);
 // $total-columns: 12;
 // $column-gutter: rem-calc(30);
 
@@ -117,7 +117,7 @@ $include-html-global-classes: $include-html-classes;
 
 // Custom colors
    $soc-black   : #303030;
-   $soc-grey    : #E1E3E4;
+   $soc-grey    : #F7F7F7;//#E1E3E4;
    $soc-blue    : #011640;
 
 // We use these as default colors throughout
